--- a/prediction-ui/input_form_page.html
+++ b/prediction-ui/input_form_page.html
@@ -34,7 +34,7 @@
         left: 0;
         height: 100%;
         width: 100%;
-        background-image: url("wallpaper.png");
+        background-image: url("templates/wallpaper.png");
         background-size: cover;
         opacity: 0.2;
         z-index: -1; /* Places the background behind other elements */
